Prevent state label wrapping

--- a/Style/state.css
+++ b/Style/state.css
@@ -23,4 +23,5 @@
 .state > span {
 	font-size: 50px;
 	line-height: 90px;
+	white-space: nowrap;
 }
